<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvD_infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/tvD_infoText"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <Button
        android:id="@+id/btnD_crearCta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvD_infoText"
        android:layout_centerHorizontal="true"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:text="@string/btn_crearCtA"
        android:background="#01082b"
        android:textColor="@android:color/white"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/btnD_crearCta"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#C8C9CB" />
    <EditText
        android:id="@+id/etD_cuenta"
        android:layout_below="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/eth_cuenta"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <EditText
        android:id="@+id/etD_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etD_cuenta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/eth_contraseña"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <CheckBox
        android:id="@+id/recordar_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etD_password"
        android:layout_alignStart="@id/etD_password"
        android:layout_below="@id/etD_password"
        android:checked="false"
        android:text="@string/chbx_record" />
    <TextView
        android:id="@+id/tvD_forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_below="@id/recordar_check"
        android:paddingTop="20dp"
        android:text="@string/tvD_forgotPass"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <Button
        android:id="@+id/btnD_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:text="@string/btnD_entar"
        android:textColor="@android:color/white"
        android:background="#01082b"/>
</RelativeLayout>